--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.1",
     "axios": "^1.8.4",
+    "bcryptjs": "^3.0.2",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.5.0"
   },
   "devDependencies": {
